--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -19,6 +19,7 @@
 
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
+#set variables
 env:
   AZURE_WEBAPP_NAME: gitub-actions-vnr   # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
