--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -22,7 +22,7 @@ name: Build and deploy ASP.Net Core app to an Azure Web App
 #set variables
 env:
   AZURE_WEBAPP_NAME: gitub-actions-vnr   # set this to the name of your Azure Web App
-  AZURE_WEBAPP_PACKAGE_PATH: 'WebApplication1'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: 'WebApplication1/WebApplication1.sln'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.308'                 # set this to the .NET Core version to use
 
 on:
@@ -54,7 +54,7 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --no-restore
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
