--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -23,7 +23,7 @@ name: Build and deploy ASP.Net Core app to an Azure Web App
 env:
   AZURE_WEBAPP_NAME: gitub-actions-vnr   # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: '/home/runner/work/Github_Actions/Github_Actions'     # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '6.0.308'                 # set this to the .NET Core version to use
+  DOTNET_VERSION: '6.0.*'                 # set this to the .NET Core version to use
 
 on:
   push:
